--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
   $.get('/assets/bio.txt', function(data) {
-   document.getElementById("bio").innerHTML = str_replace("\n", "\\n", data);
+   document.getElementById("bio").innerHTML = data;
   }, 'text');
 </script>
 
