--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       <div><p id="bio"></p></div>
     </div>
 
+    <!-- Craft Section -->
+    <div class="w3-container w3-padding-32" id="craft">
+      <h3 class="w3-border-bottom w3-border-light-grey">craft</h3>
+      <div><iframe src="https://photos.app.goo.gl/PC6eAXUD8rmkfGqx7" height="100px" width="200px"></iframe></div>
+    </div>
+
 <!-- End page content -->
 </div>
 
