--- a/pages/craft.html
+++ b/pages/craft.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Nash Keyes</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+</head>
+<body>
 
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#home" class="w3-bar-item w3-button" style="font-size:25px;"><b>nash</b> keyes</a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#climate" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
+      <a href="#community" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
+      <a href="#craft" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
+      <a href="#contact" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
+    </div>
+  </div>
+</div>
+
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="/assets/site_header_photo.jpg">
+    <div class="w3-display-top w3-margin-top w3-left">
+    <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
+  </div>
+</header>
+
+  
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
+
+    <!-- About Section -->
+    <div class="w3-container w3-padding-32" id="woodworking">
+      <h3 class="w3-border-bottom w3-border-light-grey">woodworking</h3>
+    </div>
+
+    <!-- Craft Section -->
+    <div class="w3-container w3-padding-32" id="printmaking">
+      <h3 class="w3-border-bottom w3-border-light-grey">printmaking</h3>
+    </div>
+
+<!-- End page content -->
+</div>
+
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
+</body>
+</html>
