--- a/craft.html
+++ b/craft.html
@@ -35,12 +35,13 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-    <!-- About Section -->
+    <!-- Woodworking Section -->
     <div class="w3-container w3-padding-32" id="woodworking">
       <h3 class="w3-border-bottom w3-border-light-grey">woodworking</h3>
+      <img src="assets/arts/WW_mezuzah.jpg" width="500" height="400">
     </div>
 
-    <!-- Craft Section -->
+    <!-- Printmaking Section -->
     <div class="w3-container w3-padding-32" id="printmaking">
       <h3 class="w3-border-bottom w3-border-light-grey">printmaking</h3>
     </div>
