--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
       <h3 class="w3-border-bottom w3-border-light-grey">about</h3>
-      <div><p id="bio"></p></div>
+      <div><p id="bio" style="whitespace:pre-line;"></p></div>
     </div>
 
 <!-- End page content -->
