--- a/craft.html
+++ b/craft.html
@@ -39,11 +39,13 @@
     <div class="w3-container w3-padding-32" id="woodworking">
       <h3 class="w3-border-bottom w3-border-light-grey">woodworking</h3>
       <img src="assets/arts/WW_mezuzah.jpg" height="200">
+      <img src="assets/arts/WW_spoon.jpg" height="200">
     </div>
 
     <!-- Printmaking Section -->
     <div class="w3-container w3-padding-32" id="printmaking">
       <h3 class="w3-border-bottom w3-border-light-grey">printmaking</h3>
+      <img src="assets/arts/PR_nkwpsticker.jpg" height="100">
     </div>
 
 <!-- End page content -->
