--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/assets/site_header_photo.jpg">
+  <img class="w3-image" src="/assets/site_header_v2.jpg">
     <div class="w3-display-top w3-margin-top w3-left">
     <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
   </div>
