--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Nash Keyes</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="css/main.css">
 <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
 </head>
 <body>
