--- a/craft.html
+++ b/craft.html
@@ -54,7 +54,7 @@
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="WW_spoon.jpg" style="width:10%">
+        <img src="assets/arts/WW_spoon.jpg" style="width:10%">
         <div class="text">Caption Text</div>
       </div>
     
