--- a/craft.html
+++ b/craft.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Slideshow test -->
-    <div class="slideshow-container">
+    <div class="slideshow-container" display="flex">
 
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
