--- a/craft.html
+++ b/craft.html
@@ -58,13 +58,13 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
-          <img src="assets/arts/WW_spoon.jpg" style="width:10%">
+          <img src="assets/arts/WW_spoon.jpg" style="height:100px">
           <div class="text">Caption Text</div>
         </div>
       
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
-          <img src="assets/arts/WW_mezuzah.jpg" style="width:10%">
+          <img src="assets/arts/WW_mezuzah.jpg" style="height:100px">
           <div class="text">Caption Two</div>
         </div>
       
