--- a/climate.html
+++ b/climate.html
@@ -38,8 +38,23 @@
     <!-- Work Section -->
     <div class="w3-container w3-padding-32" id="work">
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
-      <h4>EPA ORISE Fellowship - Equitable Climate Adaptation</h4>
-      <h4>NASA DEVELOP - Remote Sensing & EJ Analysis of Urban Extreme Heat</h4>
+      
+      <div class="card">
+        <!-- IMG -->
+        <div class="container">
+          <p>Equitable Climate Adaptation Resource Development</p>
+          <p><i>EPA ORISE Fellowship (Feb 2023 - est. May 2025)</i></p>
+        </div>
+      </div>
+
+      <!-- NASA DEVELOP Card -->
+      <div class="card">
+        <!-- IMG -->
+        <div class="container>
+          <p>NASA DEVELOP - Remote Sensing & EJ Analysis of Urban Extreme Heat</p>
+        </div>
+      </div>
+      
     </div>
 
 <!-- End page content -->
