--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button" style="font-size:25px;"><b>nash</b> keyes</a>
+    <a href="/index.html" class="w3-bar-item w3-button" style="font-size:25px;"><b>nash</b> keyes</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
-      <a href="community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
-      <a href="craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
-      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
+      <a href="/climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
+      <a href="/community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
+      <a href="/craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
+      <a href="/contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
     </div>
   </div>
 </div>
