--- a/craft.html
+++ b/craft.html
@@ -17,7 +17,7 @@
     <div class="w3-right w3-hide-small">
       <a href="/climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
       <a href="/community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
-      <a href="/craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
+      <a href="/craft.html" class="w3-bar-item w3-button" style="font-size:20px;background-color:#cfcecc;">craft</a>
       <a href="/contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
     </div>
   </div>
