--- a/climate.html
+++ b/climate.html
@@ -43,7 +43,7 @@
         <!-- IMG -->
         <div class="container">
           <p>Equitable Climate Adaptation Resource Development</p>
-          <p><i>EPA ORISE Fellowship (Feb 2023 - est. May 2025)</i></p>
+          <p><i>EPA ORISE Fellowship: Feb 2023 - May 2025 (expected)</i></p>
         </div>
       </div>
 
@@ -51,7 +51,8 @@
       <div class="card">
         <!-- IMG -->
         <div class="container>
-          <p>NASA DEVELOP - Remote Sensing & EJ Analysis of Urban Extreme Heat</p>
+          <p>Remote Sensing & EJ Analysis of Urban Extreme Heat in Milwaukee</p>
+          <p><i>NASA DEVELOP Research Program: Sep 2022 - Nov 2022</i></p>
         </div>
       </div>
       
