--- a/climate.html
+++ b/climate.html
@@ -43,16 +43,15 @@
         <!-- IMG -->
         <div class="container">
           <p>Equitable Climate Adaptation Resource Development</p>
-          <p><i>EPA ORISE Fellowship: Feb 2023 - May 2025 (expected)</i></p>
+          <p><i>EPA Office of Water: ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
         </div>
       </div>
 
-      <!-- NASA DEVELOP Card -->
       <div class="card">
         <!-- IMG -->
-        <div class="container>
-          <p>Remote Sensing & EJ Analysis of Urban Extreme Heat in Milwaukee</p>
-          <p><i>NASA DEVELOP Research Program: Sep 2022 - Nov 2022</i></p>
+        <div class="container">
+          <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
+          <p><i>NASA DEVELOP Research Program: Project Lead, Sep 2022 - Nov 2022</i></p>
         </div>
       </div>
       
