--- a/climate.html
+++ b/climate.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="card" style="width:33%;">
-        <!-- IMG -->
+        <img src="/assets/crwu.png"></img>
         <div class="container">
           <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
           <p><i>NASA DEVELOP Research Program: Project Lead, Sep 2022 - Nov 2022</i></p>
