--- a/climate.html
+++ b/climate.html
@@ -40,7 +40,7 @@
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
       
       <div class="card" style="width:33%;">
-        <!-- IMG -->
+        <img src="/assets/crwu.png" style="width:30%;"></img>
         <div class="container">
           <p>Equitable Climate Adaptation Resource Development</p>
           <p><i>EPA Office of Water: ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
@@ -48,7 +48,6 @@
       </div>
 
       <div class="card" style="width:33%;">
-        <img src="/assets/crwu.png"></img>
         <div class="container">
           <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
           <p><i>NASA DEVELOP Research Program: Project Lead, Sep 2022 - Nov 2022</i></p>
