--- a/climate.html
+++ b/climate.html
@@ -40,7 +40,7 @@
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
       
       <div class="card" style="width:33%;">
-        <img src="/assets/crwu.png" style="width:30%;"></img>
+        <img src="/assets/crwu.png" style="width:90%;align:center;"></img>
         <div class="container">
           <p>Equitable Climate Adaptation Resource Development</p>
           <p><i>EPA Office of Water: ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
