--- a/climate.html
+++ b/climate.html
@@ -40,11 +40,13 @@
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
       
       <div class="card" style="width:33%;">
-        <img src="/assets/crwu.png" class="card-img"></img>
-        <div class="container">
-          <p>Equitable Climate Adaptation Resource Development</p>
-          <p><i>EPA Office of Water: ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
-        </div>
+        <a href="https://www.epa.gov/crwu/building-equity-environmental-justice">
+          <img src="/assets/crwu.png" class="card-img"></img>
+          <div class="container">
+            <p>Equitable Climate Adaptation Resource Development</p>
+            <p><i>EPA Office of Water: ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
+          </div>
+        </a>
       </div>
 
       <div class="card" style="width:33%;">
