--- a/climate.html
+++ b/climate.html
@@ -40,7 +40,7 @@
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
       
       <div class="card" style="width:33%;">
-        <a href="https://www.epa.gov/crwu/building-equity-environmental-justice">
+        <a href="https://www.epa.gov/crwu/building-equity-environmental-justice" class="div-link">
           <img src="/assets/crwu.png" class="card-img"></img>
           <div class="container">
             <p>Equitable Climate Adaptation Resource Development</p>
@@ -50,18 +50,21 @@
       </div>
 
       <div class="card" style="width:33%;">
-        <div class="container">
-          <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
-          <p><i>NASA DEVELOP Research Program: Project Lead, Sep 2022 - Nov 2022</i></p>
-        </div>
+        <a href="https://ntrs.nasa.gov/citations/20220018647" class="div-link">
+          <div class="container">
+            <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
+            <p><i>NASA DEVELOP Research Program: Project Lead, Sep 2022 - Nov 2022</i></p>
+          </div>
+        </a>
       </div>
 
       <div class="card" style="width:33%;">
-        <!-- IMG -->
-        <div class="container">
-          <p>Zoning Reform Advocacy</p>
-          <p><i>Desegregate CT: Volunteer (Jan 2022 - Aug 2022)</i></p>
-        </div>
+        <a href="https://pubs.aip.org/aip/cha/article/33/9/093132/2912091/Stochastic-paleoclimatology-Modeling-the-EPICA-ice" class="div-link">
+          <div class="container">
+            <p>Paleoclimate Data Modeling</p>
+            <p><i>Yale Department of Earth & Planetary Sciences: Postgraduate Researcher (Sep 2021 - Aug 2022)</i></p>
+          </div>
+        </a>
       </div>
 
       
