--- a/climate.html
+++ b/climate.html
@@ -44,7 +44,7 @@
           <img src="/assets/crwu.png" class="card-img"></img>
           <div class="container">
             <p>Equitable Climate Adaptation Resource Development</p>
-            <p><i>EPA Office of Water: ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
+            <p><i>US EPA Office of Water\nORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
           </div>
         </a>
       </div>
@@ -53,7 +53,7 @@
         <a href="https://ntrs.nasa.gov/citations/20220018647" class="div-link">
           <div class="container">
             <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
-            <p><i>NASA DEVELOP Research Program: Project Lead, Sep 2022 - Nov 2022</i></p>
+            <p><i>NASA DEVELOP Research Program\nProject Lead, Sep 2022 - Nov 2022</i></p>
           </div>
         </a>
       </div>
