--- a/climate.html
+++ b/climate.html
@@ -39,7 +39,7 @@
     <div class="w3-container w3-padding-32" id="work">
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
       
-      <div class="card" style="width:33%;">
+      <div class="card">
         <a href="https://www.epa.gov/crwu/building-equity-environmental-justice" class="div-link">
           <img src="/assets/crwu.png" class="card-img"></img>
           <div class="container">
@@ -49,7 +49,7 @@
         </a>
       </div>
 
-      <div class="card" style="width:33%;">
+      <div class="card">
         <a href="https://ntrs.nasa.gov/citations/20220018647" class="div-link">
           <div class="container">
             <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
@@ -58,7 +58,7 @@
         </a>
       </div>
 
-      <div class="card" style="width:33%;">
+      <div class="card">
         <a href="https://pubs.aip.org/aip/cha/article/33/9/093132/2912091/Stochastic-paleoclimatology-Modeling-the-EPICA-ice" class="div-link">
           <div class="container">
             <p>Paleoclimate Data Modeling</p>
