--- a/climate.html
+++ b/climate.html
@@ -51,6 +51,7 @@
 
       <div class="card">
         <a href="https://ntrs.nasa.gov/citations/20220018647" class="div-link">
+          <img src="/assets/develop.png" class="card-img"></img>
           <div class="container">
             <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
             <p><i>NASA DEVELOP Research Program\nProject Lead, Sep 2022 - Nov 2022</i></p>
@@ -60,6 +61,7 @@
 
       <div class="card">
         <a href="https://pubs.aip.org/aip/cha/article/33/9/093132/2912091/Stochastic-paleoclimatology-Modeling-the-EPICA-ice" class="div-link">
+          <img src="/assets/postgrad.png" class="card-img"></img>
           <div class="container">
             <p>Paleoclimate Data Modeling</p>
             <p><i>Yale Department of Earth & Planetary Sciences: Postgraduate Researcher (Sep 2021 - Aug 2022)</i></p>
@@ -71,11 +73,10 @@
     </div>
 
 
-
     <div class="w3-container w3-padding-32" id="work">
       <h3 class="w3-border-bottom w3-border-light-grey">writing</h3>
-      <div class="card" style="width:33%;">
-        <!-- IMG -->
+      <div class="card">
+        <img src="/assets/deseg.png" class="card-img"></img>
         <div class="container">
           <p>Zoning Reform Advocacy</p>
           <p><i>Desegregate CT: Volunteer (Jan 2022 - Aug 2022)</i></p>
