--- a/climate.html
+++ b/climate.html
@@ -44,7 +44,7 @@
           <img src="/assets/crwu.png" class="card-img"></img>
           <div class="container">
             <p>Equitable Climate Adaptation Resource Development</p>
-            <p><i>US EPA Office of Water\nORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
+            <p><i>US EPA Office of Water<br>ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
           </div>
         </a>
       </div>
@@ -54,7 +54,7 @@
           <img src="/assets/develop.png" class="card-img"></img>
           <div class="container">
             <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
-            <p><i>NASA DEVELOP Research Program\nProject Lead, Sep 2022 - Nov 2022</i></p>
+            <p><i>NASA DEVELOP Research Program<br>Project Lead, Sep 2022 - Nov 2022</i></p>
           </div>
         </a>
       </div>
@@ -64,7 +64,7 @@
           <img src="/assets/postgrad.png" class="card-img"></img>
           <div class="container">
             <p>Paleoclimate Data Modeling</p>
-            <p><i>Yale Department of Earth & Planetary Sciences: Postgraduate Researcher (Sep 2021 - Aug 2022)</i></p>
+            <p><i>Yale Department of Earth & Planetary Sciences<br>Postgraduate Researcher (Sep 2021 - Aug 2022)</i></p>
           </div>
         </a>
       </div>
@@ -79,7 +79,7 @@
         <img src="/assets/deseg.png" class="card-img"></img>
         <div class="container">
           <p>Zoning Reform Advocacy</p>
-          <p><i>Desegregate CT: Volunteer (Jan 2022 - Aug 2022)</i></p>
+          <p><i>Desegregate CT<br>Volunteer (Jan 2022 - Aug 2022)</i></p>
         </div>
       </div>
 
