--- a/climate.html
+++ b/climate.html
@@ -61,7 +61,7 @@
 
       <div class="card">
         <a href="https://pubs.aip.org/aip/cha/article/33/9/093132/2912091/Stochastic-paleoclimatology-Modeling-the-EPICA-ice" class="div-link">
-          <img src="/assets/postgrad.png" class="card-img"></img>
+          <img src="/assets/postgrad.jpeg" class="card-img"></img>
           <div class="container">
             <p>Paleoclimate Data Modeling</p>
             <p><i>Yale Department of Earth & Planetary Sciences<br>Postgraduate Researcher (Sep 2021 - Aug 2022)</i></p>
