--- a/climate.html
+++ b/climate.html
@@ -40,7 +40,7 @@
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
       
       <div class="card">
-        <a href="https://www.epa.gov/crwu/building-equity-environmental-justice" class="div-link">
+        <a href="https://www.epa.gov/crwu/building-equity-environmental-justice" class="div-link" target="_blank" rel="noopener noreferrer">
           <img src="/assets/crwu.png" class="card-img"></img>
           <div class="container">
             <p>Equitable Climate Adaptation Resource Development</p>
@@ -50,7 +50,7 @@
       </div>
 
       <div class="card">
-        <a href="https://ntrs.nasa.gov/citations/20220018647" class="div-link">
+        <a href="https://ntrs.nasa.gov/citations/20220018647" class="div-link" target="_blank" rel="noopener noreferrer">
           <img src="/assets/develop.png" class="card-img"></img>
           <div class="container">
             <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card">
-        <a href="https://pubs.aip.org/aip/cha/article/33/9/093132/2912091/Stochastic-paleoclimatology-Modeling-the-EPICA-ice" class="div-link">
+        <a href="https://pubs.aip.org/aip/cha/article/33/9/093132/2912091/Stochastic-paleoclimatology-Modeling-the-EPICA-ice" class="div-link" target="_blank" rel="noopener noreferrer">
           <img src="/assets/postgrad.jpeg" class="card-img"></img>
           <div class="container">
             <p>Paleoclimate Data Modeling</p>
