--- a/climate.html
+++ b/climate.html
@@ -44,7 +44,7 @@
           <img src="/assets/crwu.png" class="card-img"></img>
           <div class="container">
             <p>Equitable Climate Adaptation Resource Development</p>
-            <p><i>US EPA Office of Water<br>ORISE Fellow, Feb 2023 - May 2025 (expected)</i></p>
+            <p class="caption-text">US EPA Office of Water<br>ORISE Fellow, Feb 2023 - May 2025 (expected)</p>
           </div>
         </a>
       </div>
@@ -54,7 +54,7 @@
           <img src="/assets/develop.png" class="card-img"></img>
           <div class="container">
             <p>Remote Sensing & Environmental Justice Analysis of Urban Heat in Milwaukee, WI</p>
-            <p><i>NASA DEVELOP Research Program<br>Project Lead, Sep 2022 - Nov 2022</i></p>
+            <p class="caption-text">NASA DEVELOP Research Program<br>Project Lead, Sep 2022 - Nov 2022</p>
           </div>
         </a>
       </div>
@@ -64,7 +64,7 @@
           <img src="/assets/postgrad.jpeg" class="card-img"></img>
           <div class="container">
             <p>Paleoclimate Data Modeling</p>
-            <p><i>Yale Department of Earth & Planetary Sciences<br>Postgraduate Researcher (Sep 2021 - Aug 2022)</i></p>
+            <p class="caption-text">Yale Department of Earth & Planetary Sciences<br>Postgraduate Researcher (Sep 2021 - Aug 2022)</p>
           </div>
         </a>
       </div>
