testing jquery header footer

--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Nash Keyes</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/main.css">
-<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+	<title>Nash Keyes</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script>
+		$(function() {
+		  $('#header').load('header.html');
+		  $('#footer').load('footer.html');
+		  alert("test");
+		});
+	</script>
 </head>
 <body>
 
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="/" class="w3-bar-item w3-button" style="font-size:25px;background-color:#cfcecc;"><b>nash</b> keyes</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="/climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
-      <a href="/community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
-      <a href="/craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
-      <a href="/contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
-    </div>
-  </div>
-</div>
 
-<!-- Header -->
+
+<!-- Navbar (sit on top) -->
+<div id="header"></div>
+
+<!-- Image -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/assets/site_header_v2.jpg">
+  <img class="w3-image" src="assets/site_header_v2.jpg">
     <div class="w3-display-top w3-margin-top w3-left">
-    <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
   </div>
 </header>
 
@@ -44,18 +42,16 @@
 <!-- End page content -->
 </div>
 
+<div id="footer"></div>
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
 
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 <script>
-  $.get('/assets/bio.txt', function(data) {
+  $.get('assets/bio.txt', function(data) {
    document.getElementById("bio").innerHTML = data;
   }, 'text');
 </script>
+
 
 </body>
 </html>
