--- a/climate.html
+++ b/climate.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Nash Keyes</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/main.css">
-<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+	<title>Nash Keyes</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="load_header_footer.js"></script>
 </head>
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="/" class="w3-bar-item w3-button" style="font-size:25px;"><b>nash</b> keyes</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="/climate.html" class="w3-bar-item w3-button" style="font-size:20px;background-color:#cfcecc;">climate</a>
-      <a href="/community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
-      <a href="/craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
-      <a href="/contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
-    </div>
-  </div>
-</div>
+<div id="header"></div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
@@ -90,9 +81,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
+<div id="footer"></div>
 
 
 <script src="script_craft.js" type="text/javascript"></script>
