--- a/craft.html
+++ b/craft.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Nash Keyes</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/main.css">
-<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+	<title>Nash Keyes</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="load_header_footer.js"></script>
 </head>
 <body>
 
