--- a/climate.html
+++ b/climate.html
@@ -20,7 +20,7 @@
       <a href="climate.html" class="w3-bar-item w3-button" style="font-size:20px;background-color:#cfcecc;">climate</a>
       <a href="community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
       <a href="craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
-      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
+      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;"><i>contact</i></a>
     </div>
   </div>
 </div>
@@ -28,7 +28,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="assets/site_banner_photo.jpg" height="400">
+  <img class="w3-image" src="assets/site_banner_v2.jpg" height="400">
     <div class="w3-display-top w3-margin-top w3-left">
     <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
   </div>
@@ -39,8 +39,10 @@
 <div class="w3-content w3-padding" style="max-width:1564px">
 
     <!-- Work Section -->
-    <div class="w3-container w3-padding-32" id="work">
+    <div class="w3-container" id="work">
       <h3 class="w3-border-bottom w3-border-light-grey">work</h3>
+	  
+	  <p>My academic background is in math and climate science, with a focus on geophysical fluid dynamics, climate physics, and stochastic modeling. However, I have chosen to pursue more applied work in climate adaptation research and planning in order to combine my scientific background with my passion for environmental justice and critical geography. I am currently doing work in equitable adaptation and geographic information systems, and plan to pursue graduate study in urban planning and geography in the near future.</p>
       
       <div class="card">
         <a href="https://www.epa.gov/crwu/building-equity-environmental-justice" class="div-link" target="_blank" rel="noopener noreferrer">
@@ -67,7 +69,7 @@
           <img src="assets/postgrad.jpeg" class="card-img"></img>
           <div class="container">
             <p>Paleoclimate Data Modeling</p>
-            <p class="caption-text">Yale Department of Earth & Planetary Sciences<br>Postgraduate Researcher (Sep 2021 - Aug 2022)</p>
+            <p class="caption-text">Yale Department of Earth & Planetary Sciences<br>Postgraduate Researcher, Sep 2021 - Aug 2022</p>
           </div>
         </a>
       </div>
@@ -82,7 +84,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-center w3-black w3-padding-16" style="margin-top:25px;">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
