--- a/craft.html
+++ b/craft.html
@@ -20,7 +20,7 @@
       <a href="climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
       <a href="community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
       <a href="craft.html" class="w3-bar-item w3-button" style="font-size:20px;background-color:#cfcecc;">craft</a>
-      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
+      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;"><i>contact</i></a>
     </div>
   </div>
 </div>
@@ -28,7 +28,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="assets/site_banner_photo.jpg" height="400">
+  <img class="w3-image" src="assets/site_banner_v2.jpg" height="400">
     <div class="w3-display-top w3-margin-top w3-left">
     <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
   </div>
@@ -39,10 +39,10 @@
 <div class="w3-content w3-padding" style="max-width:1564px">
 
     <!-- Woodworking Section -->
-    <div class="w3-container w3-padding-32" id="woodworking" style="overflow-y:hidden;overflow-x:auto;">
+    <div class="w3-container" id="woodworking" style="overflow-y:hidden;overflow-x:auto;">
 		<h3 class="w3-border-bottom w3-border-light-grey">woodworking</h3>
 
-		<div class="card" style="width:200px;">
+		<div class="card" style="width:150px;">
 			<img src="assets/arts/WW_mezuzah.jpg" style="height:200px;float:left;"></img>
 			<div class="container" style="float:left;">
 				<p>mezuzah</p>
@@ -73,55 +73,100 @@
 				<p class="caption-text">ash & cherry</p>
 			</div>
 		</div>
+		
+		<div class="card" style="width:200px;">
+			<img src="assets/arts/IMG_4028.jpg" style="width:100%;"></img>
+			<div class="container">
+				<p>CD shelf</p>
+				<p class="caption-text">oak</p>
+			</div>
+		</div>
 
     </div>
 
     <!-- Printmaking Section -->
-    <div class="w3-container w3-padding-32" id="printmaking">
+    <div class="w3-container" id="printmaking">
       <h3 class="w3-border-bottom w3-border-light-grey">printmaking</h3>
-      <img src="assets/arts/PR_nkwpsticker.jpg" height="100">
+	  
+	  
+	  <div class="card" style="width:230px;">
+		<img src="assets/arts/PR_icelandmountains.jpg" style="width:100%;"></img>
+		<div class="container">
+			<p>Iceland mountains print</p>
+		</div>
+	  </div>
+	  
+	  <div class="card" style="width:230px;">
+		<img src="assets/arts/PR_handplane.jpg" style="width:100%;"></img>
+		<div class="container">
+			<p>hand planes print</p>
+		</div>
+	  </div>
+	  
+	  <div class="card" style="width:250px;">
+		<img src="assets/arts/PR_fromtheriver.jpg" style="width:100%;"></img>
+		<div class="container">
+			<p>from the river print</p>
+		</div>
+	  </div>
+	  
+	  <div class="card" style="width:300px;">
+		<img src="assets/arts/PR_nkwpsticker.jpg" style="width:100%;"></img>
+		<div class="container">
+			<p>printing logo sticker design</p>
+		</div>
+	  </div>
+	  
+	  
     </div>
 	
 	
 	
 	<!-- Photography Section -->
-	<div class="w3-container w3-padding-32" id="photography">
+	<div class="w3-container" id="photography">
 		<h3 class="w3-border-bottom w3-border-light-grey">photography</h3>
 	  
 		<div class="row">
 		  <div class="column">
 			<img src="assets/photog/2024-07-06 14.50.51.jpg">
 			<img src="assets/photog/Photo Jul 06 2024, 13 20 57.jpg">
-			<img src="falls2.jpg">
-			<img src="paris.jpg">
-			<img src="nature.jpg">
-			<img src="mist.jpg">
-			<img src="paris.jpg">
+			<img src="assets/photog/Photo Jul 06 2024, 14 49 54.jpg">
+			<img src="assets/photog/Photo Jul 06 2024, 18 19 56.jpg">
+			
+			<img src="assets/photog/Photo Jan 26 2024, 17 54 29.jpg">
+			<img src="assets/photog/Photo Nov 28 2023, 17 42 45 - Copy.jpg">
+
 		  </div>
 		  <div class="column">
-			<img src="underwater.jpg">
-			<img src="ocean.jpg">
-			<img src="wedding.jpg">
-			<img src="mountainskies.jpg">
-			<img src="rocks.jpg">
-			<img src="underwater.jpg">
+			<img src="assets/photog/Photo Jul 06 2024, 16 12 57.jpg">
+			<img src="assets/photog/Photo May 29 2023, 14 46 17.jpg">
+			<img src="assets/photog/Photo Jul 02 2024, 14 24 34.jpg">
+			<img src="assets/photog/Photo Jul 02 2024, 12 47 47 - Copy.jpg">
+			
+			<img src="assets/photog/2024-08-18 20.37.34.jpg">
+			<img src="assets/photog/2024-08-18 20.30.44.jpg">
 		  </div>
 		  <div class="column">
-			<img src="wedding.jpg">
-			<img src="rocks.jpg">
-			<img src="falls2.jpg">
-			<img src="paris.jpg">
-			<img src="nature.jpg">
-			<img src="mist.jpg">
-			<img src="paris.jpg">
+			<img src="assets/photog/Photo Jun 09 2024, 17 44 08.jpg">
+			<img src="assets/photog/Photo Jul 10 2024, 20 48 24.jpg">
+			<img src="assets/photog/Photo Jun 06 2024, 19 44 37.jpg">
+			<img src="assets/photog/Photo May 14 2024, 19 16 33.jpg">
+			
+			<img src="assets/photog/2023-02-21 23.06.57.jpg">
+			<img src="assets/photog/Photo Dec 27 2023, 11 13 29.jpg">
+			
+			
 		  </div>
 		  <div class="column">
-			<img src="underwater.jpg">
-			<img src="ocean.jpg">
-			<img src="wedding.jpg">
-			<img src="mountainskies.jpg">
-			<img src="rocks.jpg">
-			<img src="underwater.jpg">
+			<img src="assets/photog/Photo Feb 18 2024, 16 31 25.jpg">
+			<img src="assets/photog/Photo Jun 24 2024, 16 47 56 - Copy.jpg">
+			<img src="assets/photog/Photo Dec 16 2023, 15 45 33.jpg">
+			<img src="assets/photog/Photo Nov 22 2023, 16 53 01.jpg">
+			
+			<img src="assets/photog/Photo May 03 2024, 21 29 19.jpg">
+			<img src="assets/photog/Photo Dec 11 2023, 18 49 24.jpg">
+			
+			
 		  </div>
 		</div>
 	  
@@ -134,7 +179,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-center w3-black w3-padding-16" style="margin-top:50px;">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
