--- a/community.html
+++ b/community.html
@@ -20,7 +20,7 @@
       <a href="climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
       <a href="community.html" class="w3-bar-item w3-button" style="font-size:20px;background-color:#cfcecc;">community</a>
       <a href="craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
-      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
+      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;"><i>contact</i></a>
     </div>
   </div>
 </div>
@@ -28,7 +28,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="assets/site_banner_photo.jpg" height="400">
+  <img class="w3-image" src="assets/site_banner_v2.jpg" height="400">
     <div class="w3-display-top w3-margin-top w3-left">
     <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
   </div>
@@ -41,31 +41,43 @@
 
 
 	<!-- Organizing Section -->
-    <div class="w3-container w3-padding-32" id="organizing">
+    <div class="w3-container" id="organizing">
       <h3 class="w3-border-bottom w3-border-light-grey">organizing</h3>
       
-	  <p>I have been part of a variety of activist & community spaces related to mutual aid, affordable housing & anti-gentrification, fossil fuel divestment, covid advocacy, trans rights, and anti-war organizing. I will not list the groups I organize with here for my own safety and because I don't think it is appropriate to list them off like a resume. However, I will share some of the types of work I have done within organizing spaces to give a sense of my skills and experiences.</p><p>These include:</p>
-	  <ul>
-		<li>organizing sit-ins</li>
-		<li>writing grants</li>
-		<li>facilitating meetings</li>
-		<li>planning/supporting/hosting community events</li>
-		<li>distributing food</li>
-		<li>developing presentations</li>
-		<li>contributing to art builds</li>
-	  </ul>
+		<div style="display:inline-block;width:48%;float:left;">
+		  <p>I have been part of a variety of activist & community groups, which I will not name here. But I will share some areas of organizing I've been involved with:</p>
+		  <ul>
+			<li>mutual aid work</li>
+			<li>affordable housing & anti-gentrification organizing</li>
+			<li>fossil fuel divestment campaigning</li>
+			<li>trans rights & community-building</li>
+			<li>anti-war organizing (you know which one)</li>
+		  </ul>
+		</div>
+		<div style="display:inline-block;width:48%;float:right;">
+		  <p>And below are some of the types of work I have done within organizing spaces, to give a sense of my range of skills and experiences:</p>
+		  <ul>
+			<li>organizing sit-ins</li>
+			<li>writing grants</li>
+			<li>facilitating meetings</li>
+			<li>planning/supporting/hosting community events</li>
+			<li>distributing food</li>
+			<li>developing presentations</li>
+			<li>contributing to art builds</li>
+		  </ul>
+		</div>
 	</div>
 	  
 
     <!-- Writing Section -->
-    <div class="w3-container w3-padding-32" id="writing">
+    <div class="w3-container" id="writing">
       <h3 class="w3-border-bottom w3-border-light-grey">writing</h3>
       <div class="card">
         <a href="https://www.ctpost.com/opinion/article/Opinion-Mobilize-CT-toward-racially-equitable-17186776.php" class="div-link" target="_blank" rel="noopener noreferrer">
           <img src="assets/deseg.png" class="card-img"></img>
           <div class="container">
             <p>Op-Ed: Zoning Reform Advocacy</p>
-            <p class="caption-text">Volunteer with Desegregate CT (Jan - Aug 2022)</p>
+            <p class="caption-text">written while volunteering with Desegregate CT (Jan - Aug 2022)</p>
           </div>
         </a>
       </div>
@@ -82,10 +94,10 @@
 	  
 	  <div class="card">
         <a href="https://docs.google.com/document/d/1HlSHKdVJcU2XyXi8EwrsexVRZ2Smmd3tN68r1PDNYS8/edit?usp=sharing" class="div-link" target="_blank" rel="noopener noreferrer">
-		<img src="" class="card-img"></img>
+		<img src="assets/mask-up.jpg" class="card-img"></img>
           <div class="container">
             <p>Personal Essay: Why I'm Covid Cautious</p>
-            <p class="caption-text">commentary on why American Jews are so personally invested in "Israel". <br> email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
+            <p class="caption-text">commentary on my experience as a covid-cautious young adult and my reasons for being cautious</p>
           </div>
         </a>
       </div>
@@ -97,7 +109,7 @@
 	
 	
 	<!-- Resources Section -->
-	<div class="w3-container w3-padding-32" id="resources">
+	<div class="w3-container" id="resources">
       <h3 class="w3-border-bottom w3-border-light-grey">resources</h3>
 	  
 	  <div class="card">
@@ -112,7 +124,7 @@
 	  
 	  <div class="card">
         <a href="https://docs.google.com/document/d/1y7lA6QT7yNTqmaUuMLDJE0gvQ4Od2cFjuGOtnOyvRAU/edit?usp=sharing" class="div-link" target="_blank" rel="noopener noreferrer">
-		<img src="" class="card-img"></img>
+		<img src="assets/covid-mitigation.jpg" class="card-img"></img>
           <div class="container">
             <p>Covid Prevention Resources</p>
             <p class="caption-text">listing of approaches and supplies for reducing covid risk & mitigating spread</p>
@@ -122,7 +134,7 @@
 	  
 	  <div class="card">
         <a href="https://docs.google.com/document/d/18BLBbGtoegozhi40oqGffg3sl1_XZ0ue6xtUnFO0ThA/edit?usp=sharing" class="div-link" target="_blank" rel="noopener noreferrer">
-		<img src="" class="card-img"></img>
+		<img src="assets/positive-covid.jpg" class="card-img"></img>
           <div class="container">
             <p>Guide for what to do when you test positive for covid</p>
             <p class="caption-text">listing of approaches and supplies for self-care for people who have just gotten covid</p>
@@ -141,7 +153,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-center w3-black w3-padding-16" style="margin-top:25px;">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
