--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
       <a href="climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
       <a href="community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
       <a href="craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
-      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;background-color:#cfcecc;">contact</a>
+      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;background-color:#cfcecc;"><i>contact</i></a>
     </div>
   </div>
 </div>
@@ -28,7 +28,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="assets/site_banner_photo.jpg" height="400">
+  <img class="w3-image" src="assets/site_banner_v2.jpg" height="400">
     <div class="w3-display-top w3-margin-top w3-left">
     <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
   </div>
@@ -39,7 +39,7 @@
 <div class="w3-content w3-padding" style="max-width:1564px">
 
     <!-- Work Section -->
-    <div class="w3-container w3-padding-32" id="work">
+    <div class="w3-container" id="work">
       <h3 class="w3-border-bottom w3-border-light-grey">contact</h3>
       
       <div class="card">
@@ -70,7 +70,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-center w3-black w3-padding-16" style="margin-top:25px;">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
