--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <a href="climate.html" class="w3-bar-item w3-button" style="font-size:20px;">climate</a>
       <a href="community.html" class="w3-bar-item w3-button" style="font-size:20px;">community</a>
       <a href="craft.html" class="w3-bar-item w3-button" style="font-size:20px;">craft</a>
-      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;">contact</a>
+      <a href="contact.html" class="w3-bar-item w3-button" style="font-size:20px;"><i>contact</i></a>
     </div>
   </div>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="assets/site_header_photo.jpg" height="400">
+  <img class="w3-image" src="assets/site_header_v2.jpg" height="400">
     <div class="w3-display-top w3-margin-top w3-left">
     <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-hide-small w3-text-light-grey"><b>Nash</b> Keyes</span></h1>-->
   </div>
@@ -39,7 +39,7 @@
 <div class="w3-content w3-padding" style="max-width:1564px">
 
     <!-- About Section -->
-    <div class="w3-container w3-padding-32" id="about">
+    <div class="w3-container" id="about">
       <h3 class="w3-border-bottom w3-border-light-grey">about</h3>
       <div>
 		<p id="bio1" style="whitespace:pre-line;">I'm Nash Keyes (they/them), an early-career professional in climate adaptation and planning. I am passionate about the intersections of urban studies, geography, water, and environmental justice, including community-based adaptation planning, fighting green gentrification, and extreme heat and flood community preparedness. My skills range from GIS, climate science, mathematical modeling, and research to writing, design, public speaking, and facilitation.</p>
@@ -53,7 +53,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-center w3-black w3-padding-16" style="margin-top:25px;">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
