--- a/craft.html
+++ b/craft.html
@@ -67,7 +67,7 @@
 		</div>
 	  
 		<div class="card" style="width:200px;">
-			<img src="assets/arts/WW_bookshelf.png" style="width:100%;"></img>
+			<img src="assets/arts/WW_bookshelf.PNG" style="width:100%;"></img>
 			<div class="container">
 				<p>bookshelf</p>
 				<p class="caption-text">ash & cherry</p>
