--- a/craft.html
+++ b/craft.html
@@ -147,14 +147,14 @@
 			<img src="assets/photog/Photo Jul 10 2024, 20 48 24.jpg">
 			<img src="assets/photog/Photo Jun 06 2024, 19 44 37.jpg">
 			<img src="assets/photog/Photo May 14 2024, 19 16 33.jpg">
-			
+			<img src="assets/photog/Photo May 03 2024, 21 29 19.jpg">
 			
 		  </div>
 		  <div class="column">
 			<img src="assets/photog/Photo Feb 18 2024, 16 31 25.jpg">
 			<img src="assets/photog/Photo Jun 24 2024, 16 47 56 - Copy.jpg">
 			<img src="assets/photog/Photo Nov 22 2023, 16 53 01.jpg">
-			<img src="assets/photog/Photo May 03 2024, 21 29 19.jpg">
+			<img src="assets/photog/2023-12-16 15.45.33.jpg">
 			<img src="assets/photog/Photo Dec 11 2023, 18 49 24.jpg">
 			
 			
