--- a/community.html
+++ b/community.html
@@ -83,7 +83,7 @@
       </div>
 	  
 	  <div class="card">
-        <a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
+        	<a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 		<img src="assets/WZO-PRF.jpg" class="card-img"></img>
           <div class="container">
             <p>Personal Essay: American Jews and "Israel"</p>
@@ -93,11 +93,11 @@
       </div>
 	  
 	  <div class="card">
-        <a href="https://docs.google.com/document/d/1HlSHKdVJcU2XyXi8EwrsexVRZ2Smmd3tN68r1PDNYS8/edit?usp=sharing" class="div-link" target="_blank" rel="noopener noreferrer">
+        	<a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 		<img src="assets/mask-up.jpg" class="card-img"></img>
           <div class="container">
             <p>Personal Essay: Why I'm Covid Cautious</p>
-            <p class="caption-text">commentary on my experience as a covid-cautious young adult and my reasons for being cautious</p>
+            <p class="caption-text">commentary on my experience with and motivations for living a covid-cautious life as a young adult. <br> email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
           </div>
         </a>
       </div>
