--- a/community.html
+++ b/community.html
@@ -83,21 +83,23 @@
       </div>
 	  
 	  <div class="card">
-        	<a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
-		<img src="assets/WZO-PRF.jpg" class="card-img"></img>
-          <div class="container">
-            <p>Personal Essay: American Jews and "Israel"</p>
-            <p class="caption-text">commentary on why American Jews are so personally invested in "Israel". <br> email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
-          </div>
-        </a>
-      </div>
+            <a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
+	    <img src="assets/WZO-PRF.jpg" class="card-img"></img>
+            <div class="container">
+            	<p>Personal Essay: American Jews and "Israel"</p>
+            	<p class="caption-text">commentary on the personal and political factors that have manufactured American Jewish support for the state of Israel.</p>
+	    	<p>email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
+            </div>
+            </a>
+     	  </div>
 	  
 	  <div class="card">
         	<a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 		<img src="assets/mask-up.jpg" class="card-img"></img>
           <div class="container">
             <p>Personal Essay: Why I'm Covid Cautious</p>
-            <p class="caption-text">commentary on my experience with and motivations for living a covid-cautious life as a young adult. <br> email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
+            <p class="caption-text">personal essay on my experience with and motivations for living a covid-cautious life as a young adult.</p>
+	    <p>email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
           </div>
         </a>
       </div>
